--- a/icml_eval.ipynb
+++ b/icml_eval.ipynb
@@ -479,18 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "919bfd57-db7d-417b-bdbc-5b6eaf50cc02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transcribed_midi1 = f'midi/asap-dataset/Bach/Fugue/bwv_848/Denisova06M.wav.midi'\n",
-    "transcribed_midi2 = f'midi/asap-dataset/Bach/Fugue/bwv_848/Lee01M.wav.midi'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "74b0358c-6ecd-4205-b5dc-99d8b0c53d3e",
    "metadata": {},
    "outputs": [],
@@ -505,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "bd13cc6a-cfaf-49b1-b8fb-32e46ab07434",
    "metadata": {},
    "outputs": [],
@@ -545,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "c6e6f817-89b2-4997-ae9f-03e52673d93c",
    "metadata": {},
    "outputs": [],
@@ -582,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "30c71235-4888-4340-ac52-662e965606ea",
    "metadata": {},
    "outputs": [],
@@ -592,7 +581,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
+   "id": "8eb5b120-fdfc-4fc6-a576-c7da199faa57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transcribed_midi1 = 'midi/asap-dataset/Bach/Fugue/bwv_848/Denisova06M.wav.midi'\n",
+    "transcribed_midi2 = 'midi/asap-dataset/Bach/Fugue/bwv_848/Lee01M.wav.midi'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "7077966e-8d3c-4ba4-b2a4-bd487a0ad525",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "e75a600f-01ef-4007-b39f-364df3a13724",
    "metadata": {},
    "outputs": [],
@@ -612,30 +612,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "9b44c809-cde8-4402-a316-ba08969ae567",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MIDI file saved as /tmp/music21/tmpeyjucqz0.mid\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "xml_to_midi_file = str(musicxml_to_midi(musicxml_score))"
+    "# xml_to_midi_file = str(musicxml_to_midi(musicxml_score))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "5949d40c-b4f8-4a7a-8bf7-0249e81d2636",
    "metadata": {},
    "outputs": [],
    "source": [
-    "D, wp = align_midi_with_dtw(xml_to_midi_file, transcribed_midi1)"
+    "# D, wp = align_midi_with_dtw(xml_to_midi_file, transcribed_midi1)"
    ]
   },
   {
@@ -648,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "5ac1e533-8490-425b-a111-6fffdb0df294",
    "metadata": {},
    "outputs": [],
@@ -658,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "2da372d3-386c-4e20-9e59-55da09b09dff",
    "metadata": {},
    "outputs": [],
@@ -675,18 +667,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "53d09faa-b34f-4d80-96bb-42bdee1643d0",
+   "execution_count": 15,
+   "id": "4c92a778-ea44-4a40-af4e-451d3a683bbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "est_intervals = ref_intervals[wp[::-1].T[0]]\n",
-    "est_pitches = ref_pitches[wp[::-1].T[0]]"
+    "midi_data = pretty_midi.PrettyMIDI(transcribed_midi2)\n",
+    "est_intervals, est_pitches = [], []\n",
+    "for instrument in midi_data.instruments:\n",
+    "    for note in instrument.notes:\n",
+    "        est_intervals.append((note.start, note.end))\n",
+    "        est_pitches.append(note.pitch)\n",
+    "est_intervals = np.array(est_intervals)\n",
+    "est_pitches = np.array(est_pitches)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
+   "id": "53d09faa-b34f-4d80-96bb-42bdee1643d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_intervals = ref_intervals[wp[::-1].T[0]]\n",
+    "ref_pitches = ref_pitches[wp[::-1].T[0]]\n",
+    "est_intervals = est_intervals[wp[::-1].T[1]]\n",
+    "est_pitches = est_pitches[wp[::-1].T[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "84202fc6-378d-4dd5-bec2-cc3a31f524a1",
    "metadata": {},
    "outputs": [],
@@ -696,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "dcad4ca2-76db-460c-913b-3dd8962afdc3",
    "metadata": {},
    "outputs": [
@@ -704,10 +715,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.79 \n",
-      "recall: 1.0 \n",
-      "f_measure: 0.88 \n",
-      "avg_overlap_ratio: 1.0\n"
+      "precision: 0.04 \n",
+      "recall: 0.04 \n",
+      "f_measure: 0.04 \n",
+      "avg_overlap_ratio: 0.74\n"
      ]
     }
    ],
@@ -717,17 +728,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "5baea4df-9573-4160-9b94-348e9a043c11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7861915367483296, 0.9992922859164898, 0.8800249298846992)"
+       "(0.4849665924276169, 0.4849665924276169, 0.4849665924276169)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,17 +750,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "4ab59749-e0b6-4b63-853e-a74c73ebdbcb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7861915367483296, 0.9992922859164898, 0.8800249298846992)"
+       "(0.5044543429844098, 0.5044543429844098, 0.5044543429844098)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
