--- a/icml_eval.ipynb
+++ b/icml_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "135a23f6-07a4-4f97-b1c4-5e6fd9b56802",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "ea686560-e7e3-4b3a-96cb-a4a50d54a3bd",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "74b0358c-6ecd-4205-b5dc-99d8b0c53d3e",
    "metadata": {},
    "outputs": [],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "bd13cc6a-cfaf-49b1-b8fb-32e46ab07434",
    "metadata": {},
    "outputs": [],
@@ -515,26 +515,15 @@
     "    notes_1 = extract_notes(midi_file_1)\n",
     "    notes_2 = extract_notes(midi_file_2)\n",
     "    \n",
-    "    time_1 = notes_1[:, 0]\n",
-    "    pitch_1 = notes_1[:, 1]\n",
-    "    \n",
-    "    time_2 = notes_2[:, 0]\n",
-    "    pitch_2 = notes_2[:, 1]\n",
-    "    \n",
-    "    # Convert time-pitch sequences into 2D feature matrices\n",
-    "    # Feature vector: [time, pitch]\n",
-    "    features_1 = np.vstack((time_1, pitch_1))\n",
-    "    features_2 = np.vstack((time_2, pitch_2))\n",
-    "\n",
     "    # Perform DTW using librosa\n",
-    "    D, wp = librosa.sequence.dtw(X=features_1, Y=features_2)\n",
+    "    D, wp = librosa.sequence.dtw(X=notes_1[:, 1], Y=notes_2[:, 1])\n",
     "    \n",
     "    return D, wp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c6e6f817-89b2-4997-ae9f-03e52673d93c",
    "metadata": {},
    "outputs": [],
@@ -571,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "30c71235-4888-4340-ac52-662e965606ea",
    "metadata": {},
    "outputs": [],
@@ -581,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "8eb5b120-fdfc-4fc6-a576-c7da199faa57",
    "metadata": {},
    "outputs": [],
@@ -592,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "7077966e-8d3c-4ba4-b2a4-bd487a0ad525",
    "metadata": {},
    "outputs": [],
@@ -602,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "e75a600f-01ef-4007-b39f-364df3a13724",
    "metadata": {},
    "outputs": [],
@@ -612,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "9b44c809-cde8-4402-a316-ba08969ae567",
    "metadata": {},
    "outputs": [],
@@ -622,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "5949d40c-b4f8-4a7a-8bf7-0249e81d2636",
    "metadata": {},
    "outputs": [],
@@ -640,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "5ac1e533-8490-425b-a111-6fffdb0df294",
    "metadata": {},
    "outputs": [],
@@ -650,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "2da372d3-386c-4e20-9e59-55da09b09dff",
    "metadata": {},
    "outputs": [],
@@ -667,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "4c92a778-ea44-4a40-af4e-451d3a683bbd",
    "metadata": {},
    "outputs": [],
@@ -684,20 +673,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "53d09faa-b34f-4d80-96bb-42bdee1643d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ref_intervals = ref_intervals[wp[::-1].T[0]]\n",
-    "ref_pitches = ref_pitches[wp[::-1].T[0]]\n",
-    "est_intervals = est_intervals[wp[::-1].T[1]]\n",
+    "est_intervals = ref_intervals[wp[::-1].T[0]]\n",
     "est_pitches = est_pitches[wp[::-1].T[1]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "84202fc6-378d-4dd5-bec2-cc3a31f524a1",
    "metadata": {},
    "outputs": [],
@@ -707,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "dcad4ca2-76db-460c-913b-3dd8962afdc3",
    "metadata": {},
    "outputs": [
@@ -715,10 +702,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.04 \n",
-      "recall: 0.04 \n",
-      "f_measure: 0.04 \n",
-      "avg_overlap_ratio: 0.74\n"
+      "precision: 0.66 \n",
+      "recall: 0.73 \n",
+      "f_measure: 0.69 \n",
+      "avg_overlap_ratio: 0.97\n"
      ]
     }
    ],
@@ -728,17 +715,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "5baea4df-9573-4160-9b94-348e9a043c11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.4849665924276169, 0.4849665924276169, 0.4849665924276169)"
+       "(0.9017230376515635, 1.0, 0.9483221476510068)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,17 +737,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "4ab59749-e0b6-4b63-853e-a74c73ebdbcb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.5044543429844098, 0.5044543429844098, 0.5044543429844098)"
+       "(0.9017230376515635, 1.0, 0.9483221476510068)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
